test/library/standard/Reflection/error-in-fn-canResolve2.good
error-in-fn-canResolve2.chpl:3: In function 'f':
error-in-fn-canResolve2.chpl:4: error: I am an error
error-in-fn-canResolve2.chpl:14: note: in function called here
